syntax = "proto3";

package otp;

service Password {
  rpc request_password (OtpRequest) returns (OtpResponse) {}
}

message OtpRequest {
  string username = 1;
  uint64 timoutSeconds = 2;
}

message OtpResponse {
  string password = 1;
}

service Validator {
  rpc validate_password (OtpValidationRequest) returns (OtpValidationResponse) {}
}

message OtpValidationRequest {
  string username = 1;
  string password = 2;
}

message OtpValidationResponse {
  bool isValid = 1;
}